--- a/webapp/view/UF.view.xml
+++ b/webapp/view/UF.view.xml
@@ -6,39 +6,58 @@
 	xmlns:t="sap.ui.table">
 	<App>
 		<pages>
-			<Page>
+			<Page showHeader="false">
 				<content>
-					<t:Table id="tableUF"
-						rows="{path: '/Ufs'}"
-						alternateRowColors="true">
-						<t:toolbar>
-							<Toolbar>
-								<Title text="Lista de UFs"/> 
-							</Toolbar>
-						</t:toolbar>
-						<t:columns>
-							<t:Column filterProperty="Codigo" sortProperty="Codigo">
-								<Label text="Código"/>
-								<t:template>
-									<Text text="{Codigo}"/>
-								</t:template>
-							</t:Column>
-							<t:Column filterProperty="Sigla" sortProperty="Sigla">
-								<Label text="Sigla"/>
-								<t:template>
-									<Text text="{Sigla}"/>
-								</t:template>
-							</t:Column>
-						</t:columns>
-					</t:Table>
+					<VBox class="sapUiSmallMargin">
+						<Panel headerText="UF">
+							<t:Table id="tableUF"
+								rows="{path: '/Ufs'}"
+								class="sapUiSizeCondensed"
+								selectionMode="Single"
+								selectionBehavior="Row"
+								enableSelectAll="false"
+								editable="true"
+								visibleRowCountMode="Auto"
+								enableBusyIndicator="true"
+								alternateRowColors="true"
+								enableCustomFilter="false">
+								<t:toolbar>
+									<Toolbar>
+										<Title text="Lista de UFs"/> 
+									</Toolbar>
+								</t:toolbar>
+								<t:columns>
+									<t:Column filterProperty="Codigo" sortProperty="Codigo">
+										<Label text="Código"/>
+										<t:template>
+											<Text text="{Codigo}"/>
+										</t:template>
+									</t:Column>
+									<t:Column filterProperty="Sigla" sortProperty="Sigla">
+										<Label text="Sigla"/>
+										<t:template>
+											<Text text="{Sigla}"/>
+										</t:template>
+									</t:Column>
+								</t:columns>
+								<t:footer>
+									<Toolbar>
+										<Button icon="sap-icon://refresh" press="onRefresh"/>
+										<ToolbarSpacer/>
+										<Button icon="sap-icon://filter"/>
+										<Button icon="sap-icon://clear-filter"/>
+									</Toolbar>
+								</t:footer>
+							</t:Table>
+						</Panel>
+					</VBox>
 				</content>
 				<footer>
 					<Toolbar>
-						<Button id="refresh" icon="sap-icon://refresh" press="onRefresh"/>
 						<ToolbarSpacer/>
-						<Button id="incluir" text="Incluir novo" press="onIncluir"/>
-						<Button id="editar" text="Editar" press="onEditar"/>
-						<Button id="remover" text="Remover" press="onRemover"/>
+						<Button icon="sap-icon://add" text="Incluir novo" press="onIncluir"/>
+						<Button icon="sap-icon://edit" text="Editar" press="onEditar"/>
+						<Button icon="sap-icon://delete" text="Remover" press="onRemover"/>
 					</Toolbar>
 				</footer>
 			</Page>
