--- a/webapp/view/UFDialog.fragment.xml
+++ b/webapp/view/UFDialog.fragment.xml
@@ -4,7 +4,7 @@
    <Dialog
 		id="UFDialog"
 		title="{view>/titulo}"
-		class="sapUiSmallMargin">
+		class="sapUiSmallMargin sapUiSizeCompact">
    	
    		<VBox id="vBoxUF" class="sapUiSmallMargin">
    			<Label text="Código:" labelFor="codigo"/>
