--- a/webapp/view/UF.view.xml
+++ b/webapp/view/UF.view.xml
@@ -6,58 +6,52 @@
 	xmlns:t="sap.ui.table">
 	<App>
 		<pages>
-			<Page showHeader="false">
+			<Page showHeader="false" class="sapUiContentPadding" enableScrolling="false">
 				<content>
-					<VBox class="sapUiSmallMargin">
-						<Panel headerText="UF">
-							<t:Table id="tableUF"
-								rows="{path: '/Ufs'}"
-								class="sapUiSizeCondensed"
-								selectionMode="Single"
-								selectionBehavior="Row"
-								enableSelectAll="false"
-								editable="true"
-								visibleRowCountMode="Auto"
-								enableBusyIndicator="true"
-								alternateRowColors="true"
-								enableCustomFilter="false">
-								<t:toolbar>
-									<Toolbar>
-										<Title text="Lista de UFs"/> 
-									</Toolbar>
-								</t:toolbar>
-								<t:columns>
-									<t:Column filterProperty="Codigo" sortProperty="Codigo">
-										<Label text="Código"/>
-										<t:template>
-											<Text text="{Codigo}"/>
-										</t:template>
-									</t:Column>
-									<t:Column filterProperty="Sigla" sortProperty="Sigla">
-										<Label text="Sigla"/>
-										<t:template>
-											<Text text="{Sigla}"/>
-										</t:template>
-									</t:Column>
-								</t:columns>
-								<t:footer>
-									<Toolbar>
-										<Button icon="sap-icon://refresh" press="onRefresh"/>
-										<ToolbarSpacer/>
-										<Button icon="sap-icon://filter"/>
-										<Button icon="sap-icon://clear-filter"/>
-									</Toolbar>
-								</t:footer>
-							</t:Table>
-						</Panel>
-					</VBox>
+					<t:Table id="tableUF"
+						rows="{
+							path: '/Ufs',
+							sorter: {
+								path: 'Sigla'
+							}
+						}"
+						selectionMode="Single"
+						selectionBehavior="Row"
+						class="sapUiSizeCondensed"
+						visibleRowCountMode="Auto"
+						enableBusyIndicator="true"
+						alternateRowColors="true">
+						<t:toolbar>
+							<Toolbar>
+								<Title text="Lista de UFs"/>
+								<ToolbarSpacer/>
+								<SearchField placeholder="Pesquisar UF..." width="30%" search="filtraUf"/>
+							</Toolbar>
+						</t:toolbar>
+						<t:columns>
+							<t:Column filterProperty="Codigo" sortProperty="Codigo">
+								<Label text="Código"/>
+								<t:template>
+									<Text text="{Codigo}"/>
+								</t:template>
+							</t:Column>
+							<t:Column filterProperty="Sigla" sortProperty="Sigla">
+								<Label text="Sigla"/>
+								<t:template>
+									<Text text="{Sigla}"/>
+								</t:template>
+							</t:Column>
+						</t:columns>
+					</t:Table>
 				</content>
 				<footer>
 					<Toolbar>
 						<ToolbarSpacer/>
-						<Button icon="sap-icon://add" text="Incluir novo" press="onIncluir"/>
-						<Button icon="sap-icon://edit" text="Editar" press="onEditar"/>
-						<Button icon="sap-icon://delete" text="Remover" press="onRemover"/>
+						<Button id="incluir" text="Incluir novo" press="onIncluir" type="Emphasized"/>
+						<Button id="editar" text="Editar" press="onEditar"/>
+						<Button id="remover" text="Remover" press="onRemover"/>
+						<ToolbarSeparator/>
+						<Button icon="sap-icon://refresh" press="onRefresh"/>
 					</Toolbar>
 				</footer>
 			</Page>
